--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 			</header>
 			<main>
 				<div class="banner">
-					<div class="container">
-						<div class="slick-slider__list">
-							<div class="slick-slider__item">
-								
-							</div>
+					<div class="slick-slider__list">
+						<div class="slick-slider__item">
+							<img class="first" src="img/iphone.png" alt="MISTAKE" title="slider">
+						</div>
+						<div class="slick-slider__item">
+							<img class="second" src="img/iphone.png" alt="MISTAKE" title="slider">
+						</div>
+						<div class="slick-slider__item">
+							<img class="third" src="img/iphone.png" alt="MISTAKE" title="slider">
 						</div>
 					</div>
 				</div>
