--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 	<head>
 		<title>Макет № 3</title>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
@@ -8,22 +8,22 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<header id="header">
-				<div class="container"></div>
-			</header>
 			<main>
 				<div class="banner">
-					<div class="slick-slider__list">
+					<header></header>
+					<div class="banner"></div>
+					<!-- <div class="slick-slider__list">
 						<div class="slick-slider__item">
-							<img class="first" src="img/iphone.png" alt="MISTAKE" title="slider">
+							<block__list>
+								<div class="block__item"></div>
+							</block__list>
+								<img class="first" src="img/slide_1.png" alt="MISTAKE" title="slider">
 						</div>
 						<div class="slick-slider__item">
-							<img class="second" src="img/iphone.png" alt="MISTAKE" title="slider">
 						</div>
 						<div class="slick-slider__item">
-							<img class="third" src="img/iphone.png" alt="MISTAKE" title="slider">
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</main>
 			<footer>
