--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Макет № 3</title>
+		<title>Макет № 7</title>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<div class="wrapper">
+			<header></header>
 			<main>
-				<div class="banner">
-					<header></header>
-					<div class="banner"></div>
-					<!-- <div class="slick-slider__list">
+				<!--<div class="promo">
+					<header class="promo__header"></header>
+					<div class="promo__banner">
+						<div class="container">
+							<div class="cta-block">
+								<h2 class="cta-block__title">Capture and Share</h2>
+								<div class="cta-block__buttons">
+									<div class="cta-block__button_first cta-block__button">
+										<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
+										<a class="button__text">App Store</a>
+									</div>
+									<div class="cta-block__button_second cta-block__button">
+										<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
+										<a class="button__text">Play Store</a></div>
+								</div>
+								<h2 class="cta-block__title">Capture and Share</h2>
+								<div class="cta-block__buttons">
+									<a class="cta-block__button cta-block__button--appstore">App Store</a>
+									<a class="cta-block__button cta-block__button--playstore">Play Store</a>
+								</div>
+								<h2 class="cta-block__title">Capture and Share</h2>
+								<div class="cta-block__buttons">
+									<a class="cta-block__button cta-block__button--appstore">App Store</a>
+									<a class="cta-block__button cta-block__button--playstore">Play Store</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+					 <div class="slick-slider__list">
 						<div class="slick-slider__item">
 							<block__list>
 								<div class="block__item"></div>
@@ -23,7 +50,19 @@
 						</div>
 						<div class="slick-slider__item">
 						</div>
+					</div>
 					</div>-->
+				<div class="banner">
+					<div class="container">
+						<div class="cta-block">
+							<!--<h2 class="cta-block__title">Capture and Share</h2>
+							<div class="cta-block__buttons">
+								<div class="cta-block__button_first cta-block__button">
+									<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
+									<a class="button__text">App Store</a>
+								</div>-->
+						</div>
+					</div>
 				</div>
 			</main>
 			<footer>
