--- a/index.html
+++ b/index.html
@@ -10,57 +10,20 @@
 		<div class="wrapper">
 			<header></header>
 			<main>
-				<!--<div class="promo">
-					<header class="promo__header"></header>
-					<div class="promo__banner">
-						<div class="container">
-							<div class="cta-block">
-								<h2 class="cta-block__title">Capture and Share</h2>
-								<div class="cta-block__buttons">
-									<div class="cta-block__button_first cta-block__button">
-										<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
-										<a class="button__text">App Store</a>
-									</div>
-									<div class="cta-block__button_second cta-block__button">
-										<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
-										<a class="button__text">Play Store</a></div>
-								</div>
-								<h2 class="cta-block__title">Capture and Share</h2>
-								<div class="cta-block__buttons">
-									<a class="cta-block__button cta-block__button--appstore">App Store</a>
-									<a class="cta-block__button cta-block__button--playstore">Play Store</a>
-								</div>
-								<h2 class="cta-block__title">Capture and Share</h2>
-								<div class="cta-block__buttons">
-									<a class="cta-block__button cta-block__button--appstore">App Store</a>
-									<a class="cta-block__button cta-block__button--playstore">Play Store</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-					 <div class="slick-slider__list">
-						<div class="slick-slider__item">
-							<block__list>
-								<div class="block__item"></div>
-							</block__list>
-								<img class="first" src="img/slide_1.png" alt="MISTAKE" title="slider">
-						</div>
-						<div class="slick-slider__item">
-						</div>
-						<div class="slick-slider__item">
-						</div>
-					</div>
-					</div>-->
 				<div class="banner">
 					<div class="container">
 						<div class="cta-block">
-							<!--<h2 class="cta-block__title">Capture and Share</h2>
+							<h2 class="cta-block__title">Capture and Share</h2>
 							<div class="cta-block__buttons">
 								<div class="cta-block__button_first cta-block__button">
 									<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
 									<a class="button__text">App Store</a>
-								</div>-->
+								</div>
+								<div class="cta-block__button_second cta-block__button">
+									<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
+									<a class="button__text">Play Store</a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
