--- a/index.html
+++ b/index.html
@@ -3,12 +3,45 @@
 	<head>
 		<title>Макет № 7</title>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<div class="wrapper">
-			<header></header>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<div class="container">
+					<a class="navbar-brand" href="#">ama</a>
+					<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav ms-auto ">
+							<li class="nav-item">
+								<a class="nav-link" href="#">Home</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Overview</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Share</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Features</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Gallery</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Download</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Compatibility</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
 			<main>
 				<div class="banner">
 					<div class="container">
@@ -27,6 +60,7 @@
 						</div>
 					</div>
 				</div>
+				<div class="benefits"></div>
 			</main>
 			<footer>
 			</footer>
@@ -34,5 +68,7 @@
 		<script src="https://code.jquery.com/jquery-3.6.4.min.js"> </script>
 		<script src="js/slick.min.js"> </script>
 		<script src="js/script.js"> </script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 	</body>
 </html>
