benefits without adaptive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ms-auto ">
 							<li class="nav-item">
-								<a class="nav-link" href="#">Home</a>
+								<a class="nav-link" href="#">Hello</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Overview</a>
@@ -60,7 +60,28 @@
 						</div>
 					</div>
 				</div>
-				<div class="benefits"></div>
+				<div class="benefits">
+					<div class="container">
+						<h2>Why ama?</h2>
+						<div class="benefits-list">
+							<div class="benefits-list__item benefits-list__item_start">
+								<img src="img/focus.png" alt="mistake" title="focus">
+								<h3>Auto focus</h3>
+								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
+							</div>
+							<div class="benefits-list__item benefits-list__item_middle">
+								<img src="img/touch_id.png" alt="mistake" title="touch_id">
+								<h3>Secured with Touch ID</h3>
+								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
+							</div>
+							<div class="benefits-list__item benefits-list__item_end">
+								<img src="img/filters.png" alt="mistake" title="filters">
+								<h3>Your Filters</h3>
+								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</main>
 			<footer>
 			</footer>
