--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<div class="container">
 					<a class="navbar-brand" href="#">ama</a>
 					<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,10 +41,10 @@
 						</ul>
 					</div>
 				</div>
-			</nav>
+			</nav>-->
 			<main>
 				<div class="banner">
-					<div class="container">
+					<div class="container-custom">
 						<div class="cta-block">
 							<h2 class="cta-block__title">Capture and Share</h2>
 							<div class="cta-block__buttons">
@@ -61,23 +61,40 @@
 					</div>
 				</div>
 				<div class="benefits">
-					<div class="container">
-						<h2>Why ama?</h2>
-						<div class="benefits-list">
-							<div class="benefits-list__item benefits-list__item_start">
+					<div class="container-custom">
+						<h2 class="col-xl-3 offset-xl-6">Why ama?</h2>
+						<div class="benefits-list row">
+							<div class="benefits-list__item benefits-list__item_start col-xl-3 offset-xl-1">
 								<img src="img/focus.png" alt="mistake" title="focus">
 								<h3>Auto focus</h3>
 								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
 							</div>
-							<div class="benefits-list__item benefits-list__item_middle">
+							<div class="benefits-list__item benefits-list__item_middle col-xl-3 offset-xl-1">
 								<img src="img/touch_id.png" alt="mistake" title="touch_id">
 								<h3>Secured with Touch ID</h3>
 								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
 							</div>
-							<div class="benefits-list__item benefits-list__item_end">
+							<div class="benefits-list__item benefits-list__item_end col-xl-3 offset-xl-1">
 								<img src="img/filters.png" alt="mistake" title="filters">
 								<h3>Your Filters</h3>
 								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="share">
+					<div class="container-custom row">
+						<div class="share-img col-xl-6 offset-xl-1">
+							<img src="img/iphone_half.png" alt="mistake" title="iphone_half">
+						</div>
+						<div class="share-item col-xl-5 ">
+							<div class="share-item__title"><h3>Share instantly</h3></div>
+							<div class="share-item__info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+							<div class="share-item__slider-list">
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/video.png" alt="mistake" title="video">
+									<p class="slider-item__paragraph">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar.</p>
+								</div>
 							</div>
 						</div>
 					</div>
