--- a/index.html
+++ b/index.html
@@ -84,13 +84,21 @@
 				</div>
 				<div class="share">
 					<div class="container-custom row">
-						<div class="share-img col-xl-6 offset-xl-1">
+						<div class="share-img col-lg-3 offset-lg-0 col-md-5 offset-lg-0">
 							<img src="img/iphone_half.png" alt="mistake" title="iphone_half">
 						</div>
-						<div class="share-item col-xl-5 ">
+						<div class="share-item col-lg-5 col-md-6 offset-md-3 col-sm-8 offset-sm-2">
 							<div class="share-item__title"><h3>Share instantly</h3></div>
 							<div class="share-item__info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
 							<div class="share-item__slider-list">
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/video.png" alt="mistake" title="video">
+									<p class="slider-item__paragraph">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar.</p>
+								</div>
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/video.png" alt="mistake" title="video">
+									<p class="slider-item__paragraph">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar.</p>
+								</div>
 								<div class="slider-item">
 									<img class="slider-item__img" src="img/video.png" alt="mistake" title="video">
 									<p class="slider-item__paragraph">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar.</p>
