--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				</div>
 			</nav>-->
 			<main>
+				<!--
 				<div class="banner">
 					<div class="container-custom">
 						<div class="cta-block">
@@ -84,10 +85,10 @@
 				</div>
 				<div class="share">
 					<div class="container-custom row">
-						<div class="share-img col-lg-3 offset-lg-0 col-md-5 offset-lg-0">
+						<div class="share-img col-lg-3 offset-lg-0 col-md-5 offset-lg-0 col-sm-8 ">
 							<img src="img/iphone_half.png" alt="mistake" title="iphone_half">
 						</div>
-						<div class="share-item col-lg-5 col-md-6 offset-md-3 col-sm-8 offset-sm-2">
+						<div class="share-item col-lg-5 col-md-7 offset-md-3 col-sm-8 offset-sm-2">
 							<div class="share-item__title"><h3>Share instantly</h3></div>
 							<div class="share-item__info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
 							<div class="share-item__slider-list">
@@ -104,6 +105,68 @@
 									<p class="slider-item__paragraph">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar.</p>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>-->
+				<div class="new-features">
+					<div class="container-custom row">
+						<div class="features-item col-xl-6 col-lg-6 offset-lg-3">
+							<div class="features-item__title"><h2>New Features</h2></div>
+							<div class="features-item__info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+							<div class="features-item__slider-list">
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/brush.png" alt="mistake" title="brush">
+									<div class="slider-info">
+										<div class="slider-info__title">Color your photos</div>
+										<div class="slider-info__paragraph">ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+									</div>
+								</div>
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/brush.png" alt="mistake" title="brush">
+									<div class="slider-info">
+										<div class="slider-info__title">Color your photos</div>
+										<div class="slider-info__paragraph">ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+									</div>
+								</div>
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/brush.png" alt="mistake" title="brush">
+									<div class="slider-info">
+										<div class="slider-info__title">Color your photos</div>
+										<div class="slider-info__paragraph">ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+									</div>
+								</div>
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/brush.png" alt="mistake" title="brush">
+									<div class="slider-info">
+										<div class="slider-info__title">Color your photos</div>
+										<div class="slider-info__paragraph">ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+									</div>
+								</div>
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/brush.png" alt="mistake" title="brush">
+									<div class="slider-info">
+										<div class="slider-info__title">Color your photos</div>
+										<div class="slider-info__paragraph">ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+									</div>
+								</div>
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/brush.png" alt="mistake" title="brush">
+									<div class="slider-info">
+										<div class="slider-info__title">Color your photos</div>
+										<div class="slider-info__paragraph">ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+									</div>
+								</div>
+								<div class="slider-item">
+									<img class="slider-item__img" src="img/brush.png" alt="mistake" title="brush">
+									<div class="slider-info">
+										<div class="slider-info__title">Color your photos</div>
+										<div class="slider-info__paragraph">ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="new-features__img col-xl-5 col-lg-6 offset-lg-3">
+							<img src="img/nexus.png" alt="mistake" title="nexus">
 						</div>
 					</div>
 				</div>
