--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-8NfRrRdVUC1Ql11rJM7EA63JY3ISeCrLYoNAPKfhs7mDTt8E57VwVBbmGzumPFfn" crossorigin="anonymous">
+		<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" integrity="sha384-jVfl9c2T/+OvO/H6oxBZ7vvOdbRtMQ0wVgUFJ2rJrM9H86tZqG0BRJkhgjKk15In" crossorigin="anonymous"></script>
+
 	</head>
 	<body>
 		<div class="wrapper">
@@ -43,7 +47,6 @@
 				</div>
 			</nav>-->
 			<main>
-				<!--
 				<div class="banner">
 					<div class="container-custom">
 						<div class="cta-block">
@@ -107,10 +110,10 @@
 							</div>
 						</div>
 					</div>
-				</div>-->
+				</div>
 				<div class="new-features">
 					<div class="container-custom row">
-						<div class="features-item col-xl-6 col-lg-6 offset-lg-3">
+						<div class="features-item col-xl-6">
 							<div class="features-item__title"><h2>New Features</h2></div>
 							<div class="features-item__info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
 							<div class="features-item__slider-list">
@@ -165,8 +168,57 @@
 								</div>
 							</div>
 						</div>
-						<div class="new-features__img col-xl-5 col-lg-6 offset-lg-3">
+						<div class="new-features__img col-xl-5">
 							<img src="img/nexus.png" alt="mistake" title="nexus">
+						</div>
+					</div>
+				</div>
+				<div class="photos">
+					<div class="container-custom">
+						<h2>Taken with ama</h2>
+						<div class="photos-info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
+					</div>
+					<div class="photos__list">
+						<div class="image-container image-first">
+							<img src="img/rectangle_554.png" alt="Image 1">
+							<div class="overlay">
+								<div class="text">
+									<p>Mauris euismod ultrices</p>
+									<i id="like1" class="fa-regular fa-heart" onclick="like('like1')"></i>
+									<span id="like-counter1">65</span>
+
+								</div>
+							</div>
+						</div>
+						<div class="image-container image-second">
+							<img src="img/rectangle_555.png" alt="Image 2">
+							<div class="overlay">
+								<div class="text">
+									<p>Mauris euismod ultrices</p>
+									<i id="like2" class="fa-regular fa-heart" onclick="like('like2')"></i>
+									<span id="like-counter2">65</span>
+								</div>
+							</div>
+						</div>
+						<div class="image-container image-third">
+							<img src="img/rectangle_556.png" alt="Image 3">
+							<div class="overlay">
+								<div class="text">
+									<p>Mauris euismod ultrices</p>
+									<i id="like3" class="fa-regular fa-heart" onclick="like('like3')"></i>
+									<span id="like-counter3">65</span>
+								</div>
+							</div>
+						</div>
+						<div class="image-container image-fourth">
+							<img src="img/rectangle_557.png" alt="Image 4">
+							<div class="overlay">
+								<div class="text">
+									<p>Mauris euismod ultrices</p>
+									<i id="like4" class="fa-regular fa-heart" onclick="like('like4')"></i>
+									<span id="like-counter4">65</span>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -177,6 +229,7 @@
 		<script src="https://code.jquery.com/jquery-3.6.4.min.js"> </script>
 		<script src="js/slick.min.js"> </script>
 		<script src="js/script.js"> </script>
+		<script src="https://kit.fontawesome.com/6f72b20b28.js" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 	</body>
