fixed bags+added adaptive to new-features and benefits

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 				</div>
 				<div class="benefits">
 					<div class="container-custom">
-						<h2 class="col-xl-3 offset-xl-6">Why ama?</h2>
+						<h2 class="col-xl-4 offset-xl-4 col-lg-12">Why ama?</h2>
 						<div class="benefits-list row">
-							<div class="benefits-list__item benefits-list__item_start col-xl-3 offset-xl-1">
+							<div class="benefits-list__item benefits-list__item_start col-xl-3 col-lg-4 col-md-6">
 								<img src="img/focus.png" alt="mistake" title="focus">
 								<h3>Auto focus</h3>
 								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
 							</div>
-							<div class="benefits-list__item benefits-list__item_middle col-xl-3 offset-xl-1">
+							<div class="benefits-list__item benefits-list__item_middle col-xl-3 offset-xl-1 col-lg-4 col-md-6">
 								<img src="img/touch_id.png" alt="mistake" title="touch_id">
 								<h3>Secured with Touch ID</h3>
 								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
 							</div>
-							<div class="benefits-list__item benefits-list__item_end col-xl-3 offset-xl-1">
+							<div class="benefits-list__item benefits-list__item_end col-xl-3 offset-xl-1 col-lg-3 col-md-12">
 								<img src="img/filters.png" alt="mistake" title="filters">
 								<h3>Your Filters</h3>
 								<p>ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor </p>
@@ -113,7 +113,7 @@
 				</div>
 				<div class="new-features">
 					<div class="container-custom row">
-						<div class="features-item col-xl-6">
+						<div class="features-item col-xl-6 col-lg 5">
 							<div class="features-item__title"><h2>New Features</h2></div>
 							<div class="features-item__info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
 							<div class="features-item__slider-list">
@@ -168,7 +168,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="new-features__img col-xl-5">
+						<div class="new-features__img col-xl-5 col-lg-5">
 							<img src="img/nexus.png" alt="mistake" title="nexus">
 						</div>
 					</div>
@@ -186,7 +186,6 @@
 									<p>Mauris euismod ultrices</p>
 									<i id="like1" class="fa-regular fa-heart" onclick="like('like1')"></i>
 									<span id="like-counter1">65</span>
-
 								</div>
 							</div>
 						</div>
