--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				</div>
 			</nav>-->
 			<main>
+				<!--
 				<div class="banner">
 					<div class="container-custom">
 						<div class="cta-block">
@@ -64,6 +65,7 @@
 						</div>
 					</div>
 				</div>
+				-->
 				<div class="benefits">
 					<div class="container-custom">
 						<h2 class="col-xl-4 offset-xl-4 col-lg-12">Why ama?</h2>
@@ -86,6 +88,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="share">
 					<div class="container-custom row">
 						<div class="share-img col-lg-3 offset-lg-0 col-md-5 offset-lg-0 col-sm-8 ">
@@ -111,6 +114,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="new-features">
 					<div class="container-custom row">
 						<div class="features-item col-xl-6 col-lg 5">
@@ -173,6 +177,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="photos">
 					<div class="container-custom">
 						<h2>Taken with ama</h2>
@@ -182,40 +187,50 @@
 						<div class="image-container image-first">
 							<img src="img/rectangle_554.png" alt="Image 1">
 							<div class="overlay">
-								<div class="text">
-									<p>Mauris euismod ultrices</p>
-									<i id="like1" class="fa-regular fa-heart" onclick="like('like1')"></i>
-									<span id="like-counter1">65</span>
+								<div class="overlay__menu">
+									<div class="overlay-text">
+										<p>Mauris euismod ultrices</p>
+									</div>
+									<div class="likes">
+										<i id="like1" class="fa-regular fa-heart" onclick="like('like1')"></i>
+										<span id="like-counter1">13</span>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="image-container image-second">
 							<img src="img/rectangle_555.png" alt="Image 2">
 							<div class="overlay">
-								<div class="text">
+								<div class="overlay__menu">
 									<p>Mauris euismod ultrices</p>
-									<i id="like2" class="fa-regular fa-heart" onclick="like('like2')"></i>
-									<span id="like-counter2">65</span>
+									<div class="likes">
+										<i id="like2" class="fa-regular fa-heart " onclick="like('like2')"></i>
+										<span id="like-counter2">23</span>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="image-container image-third">
 							<img src="img/rectangle_556.png" alt="Image 3">
 							<div class="overlay">
-								<div class="text">
+								<div class="overlay__menu">
 									<p>Mauris euismod ultrices</p>
-									<i id="like3" class="fa-regular fa-heart" onclick="like('like3')"></i>
-									<span id="like-counter3">65</span>
+									<div class="likes">
+										<i id="like3" class="fa-regular fa-heart" onclick="like('like3')"></i>
+										<span id="like-counter3">65</span>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="image-container image-fourth">
 							<img src="img/rectangle_557.png" alt="Image 4">
 							<div class="overlay">
-								<div class="text">
+								<div class="overlay__menu">
 									<p>Mauris euismod ultrices</p>
-									<i id="like4" class="fa-regular fa-heart" onclick="like('like4')"></i>
-									<span id="like-counter4">65</span>
+									<div class="likes">
+										<i id="like4" class="fa-regular fa-heart" onclick="like('like4')"></i>
+										<span id="like-counter4">2</span>
+									</div>
 								</div>
 							</div>
 						</div>
