added adaptive to taken with ama

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 					</div>
 				</div>
 
+
 				<div class="share">
 					<div class="container-custom row">
 						<div class="share-img col-lg-3 offset-lg-0 col-md-5 offset-lg-0 col-sm-8 ">
@@ -236,6 +237,11 @@
 						</div>
 					</div>
 				</div>
+				<!--
+				<div class="cta">
+					.container-custom
+				</div>
+				-->
 			</main>
 			<footer>
 			</footer>
