--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 			</nav>-->
 			<main>
-				<!--
+
 				<div class="banner">
 					<div class="container-custom">
 						<div class="cta-block">
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 				</div>
-				-->
+
 				<div class="benefits">
 					<div class="container-custom">
 						<h2 class="col-xl-4 offset-xl-4 col-lg-12">Why ama?</h2>
@@ -237,11 +237,42 @@
 						</div>
 					</div>
 				</div>
-				<!--
+
 				<div class="cta">
-					.container-custom
+					<div class="container-custom row">
+						<div class="container-custom__image col-xl-3 col-sm-12">
+							<img src="img/app_icon.png" alt="mistake" title="app_icon">
+						</div>
+						<div class="cta-form col-xl-8 col-sm-12">
+							<div class="cta-form__info">
+								<p class="cta-form__info_first">Believe me,</p>
+								<p class="cta-form__info_second">you don’t wanna</p>
+								<p class="cta-form__info_third">miss this app.</p>
+							</div>
+							<div class="cta-form__source">
+								- Newyork Times
+							</div>
+							<div class="cta-form__buttons">
+								<div class="cta-form__buttons_first cta-block__button">
+									<a href="#" target="_blank">
+										<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
+									</a>
+									<a href="#" target="_blank" class="button__text">App Store</a>
+								</div>
+								<div class="cta-form__buttons_second cta-block__button">
+									<a href="#" target="_blank">
+										<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
+									</a>
+									<a href="#" target="_blank" class="button__text">Play Store</a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				-->
+
+				<div class="compatibility">
+					
+				</div>
 			</main>
 			<footer>
 			</footer>
