--- a/index.html
+++ b/index.html
@@ -19,33 +19,32 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link" href="#">Hello</a>
+								<a class="nav-link" href="#banner">Hello</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Overview</a>
+								<a class="nav-link" href="#benefits">Overview</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Share</a>
+								<a class="nav-link" href="#share">Share</a>
 							</li>
 							<li class="nav-item features">
-								<a class="nav-link" href="#">Features</a>
+								<a class="nav-link" href="#new-features">Features</a>
 							</li>
 							<li class="nav-item ">
-								<a class="nav-link" href="#">Gallery</a>
+								<a class="nav-link" href="#photos">Gallery</a>
 							</li>
 							<li class="nav-item download">
-								<a class="nav-link" href="#">Download</a>
+								<a class="nav-link" href="#cta">Download</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Compatibility</a>
+								<a class="nav-link" href="#compatibility">Compatibility</a>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</nav>
 			<main>
-				<!--
-				<div class="banner">
+				<div class="banner" id="banner">
 					<div class="container-custom">
 						<div class="cta-block">
 							<h2 class="cta-block__title col-xl-9 offset-xl-2 col-md-12">Capture and Share</h2>
@@ -96,7 +95,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="benefits">
+				<div class="benefits" id="benefits">
 					<div class="container-custom">
 						<h2 class="col-xl-5 offset-xl-5 col-lg-12">Why ama?</h2>
 						<div class="benefits-list row">
@@ -118,7 +117,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="share">
+				<div class="share" id="share">
 					<div class="container-custom row">
 						<div class="share-img col-xl-6 col-md-12 col-sm-8 ">
 							<img src="img/iphone_half.png" alt="mistake" title="iphone_half">
@@ -143,7 +142,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="new-features">
+				<div class="new-features" id="new-features">
 					<div class="container-custom row">
 						<div class="features-item col-xl-6 col-lg 5">
 							<div class="features-item__title"><h2>New Features</h2></div>
@@ -205,7 +204,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="photos">
+				<div class="photos" id="photos">
 					<div class="container-custom">
 						<h2>Taken with ama</h2>
 						<div class="photos-info">Mauris euismod ultrices nisl sit amet luctus. Donec volutpat arcu ullamcorper facilisis vulputate. Sed auctor pulvinar ornare. Donec gravida.</div>
@@ -263,7 +262,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="cta">
+				<div class="cta" id="cta">
 					<div class="container-custom row">
 						<div class="container-custom__image col-xl-3 col-sm-12">
 							<img src="img/app_icon.png" alt="mistake" title="app_icon">
@@ -294,7 +293,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="compatibility">
+				<div class="compatibility" id="compatibility">
 					<div class="container-custom">
 						<div class="title col-xl-10 col-md-12">Compatibility</div>
 						<div class="operating-systems row">
@@ -311,7 +310,6 @@
 						</div>
 					</div>
 				</div>
-				-->
 			</main>
 			<footer>
 				<div class="container-fluid row">
