update footer and compatibility

--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
 					<div class="container-custom">
 						<div class="title col-xl-10 col-md-12">Compatibility</div>
 						<div class="operating-systems row">
-							<div class="ios col-xl-5 col-lg-6 col-md-12">
+							<div class="ios col-lg-5 col-md-12">
 								<div class="ios__title">iOS</div>
 								<div class="ios__info">Requires iOS 6.0 or later. Compatible with iPhone, iPad, and iPod touch. This app is optimized for iPhone 5.</div>
 								<img class="ios__devices" src="img/ios_devices.png" alt="MISTAKE" title="ios_devices">
 							</div>
-							<div class="android col-xl-5 col-lg-6 col-md-12">
+							<div class="android col-xl-6 col-lg-7 col-md-12">
 								<div class="android__title">Android</div>
 								<div class="android__info">Compatible with Android KitKat 4.4 or later. <br>Support for x86 devices (i.e. Samsung Galaxy Tab 3 10.1).</div>
 								<img class="android__devices" src="img/android_devices.png" alt="MISTAKE" title="android_devices">
