added fixing of bugs

--- a/index.html
+++ b/index.html
@@ -45,55 +45,76 @@
 			</nav>
 			<main>
 				<div class="banner" id="banner">
-					<div class="container-custom">
+					<div class="banner__list">
 						<div class="cta-block">
-							<h2 class="cta-block__title col-xl-9 offset-xl-2 col-md-12">Capture and Share</h2>
-							<div class="cta-block__buttons col-xl-9 offset-xl-3 col-md-12">
-								<div class="button-block">
-									<div class="button-block__button_first button-block__button">
-										<a href="#" target="_blank">
-											<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
-										</a>
-										<a href="#" target="_blank" class="button__text">App Store</a>
-									</div>
-									<div class="button-block__button_second button-block__button">
-										<a href="#" target="_blank">
-											<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
-										</a>
-										<a href="#" target="_blank" class="button__text">Play Store</a>
-									</div>
-								</div>
-								<div class="button-block">
-									<div class="button-block__button_first button-block__button">
-										<a href="#" target="_blank">
-											<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
-										</a>
-										<a href="#" target="_blank" class="button__text">App Store</a>
-									</div>
-									<div class="button-block__button_second button-block__button">
-										<a href="#" target="_blank">
-											<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
-										</a>
-										<a href="#" target="_blank" class="button__text">Play Store</a>
+							<div class="container-custom">
+								<h2 class="cta-block__title col-xl-9 offset-xl-2 col-md-12">Capture and Share</h2>
+								<div class="cta-block__buttons col-xl-9 offset-xl-3 col-md-12">
+									<div class="button-block">
+										<div class="button-block__button_first button-block__button">
+											<a href="#" target="_blank">
+												<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
+											</a>
+											<a href="#" target="_blank" class="button__text">App Store</a>
+										</div>
+										<div class="button-block__button_second button-block__button">
+											<a href="#" target="_blank">
+												<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
+											</a>
+											<a href="#" target="_blank" class="button__text">Play Store</a>
+										</div>
 									</div>
 								</div>
-								<div class="button-block">
-									<div class="button-block__button_first cta-block__button">
-										<a href="#" target="_blank">
-											<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
-										</a>
-										<a href="#" target="_blank" class="button__text">App Store</a>
+							</div>
+						</div>
+						<div class="cta-block">
+							<div class="container-custom">
+								<h2 class="cta-block__title col-xl-9 offset-xl-2 col-md-12">Capture and Share</h2>
+								<div class="cta-block__buttons col-xl-9 offset-xl-3 col-md-12">
+									<div class="button-block">
+										<div class="button-block__button_first button-block__button">
+											<a href="#" target="_blank">
+												<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
+											</a>
+											<a href="#" target="_blank" class="button__text">App Store</a>
+										</div>
+										<div class="button-block__button_second button-block__button">
+											<a href="#" target="_blank">
+												<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
+											</a>
+											<a href="#" target="_blank" class="button__text">Play Store</a>
+										</div>
 									</div>
-									<div class="button-block__button_second cta-block__button">
-										<a href="#" target="_blank">
-											<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
-										</a>
-										<a href="#" target="_blank" class="button__text">Play Store</a>
+								</div>
+							</div>
+						</div>
+						<div class="cta-block">
+							<div class="container-custom">
+								<h2 class="cta-block__title col-xl-9 offset-xl-2 col-md-12">Capture and Share</h2>
+								<div class="cta-block__buttons col-xl-9 offset-xl-3 col-md-12">
+									<div class="button-block">
+										<div class="button-block__button_first button-block__button">
+											<a href="#" target="_blank">
+												<img class="app-store" src="img/appstore.png" alt="MISTAKE" title="app-store">
+											</a>
+											<a href="#" target="_blank" class="button__text">App Store</a>
+										</div>
+										<div class="button-block__button_second button-block__button">
+											<a href="#" target="_blank">
+												<img class="play-store" src="img/playstore.png" alt="MISTAKE" title="play-store">
+											</a>
+											<a href="#" target="_blank" class="button__text">Play Store</a>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<ul class="slider-dots">
+						<li class="dot"></li>
+						<li class="dot"></li>
+						<li class="dot"></li>
+					</ul>
 				</div>
 				<div class="benefits" id="benefits">
 					<div class="container-custom">
